# gta5-simple-video-export

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  design.txt  gta5-simple-video-export.sln
capstone-project/: capstone_static.vcxproj  copy-project-file.ps1
common/: CMakeLists.txt  audiostream.cpp  audiostream.h  avcreate.cpp  avcreate.h  common.vcxproj  common.vcxproj.filters  format.cpp  format.h  logger.cpp  logger.h  packages.config  settings.cpp  settings.h  stream.cpp  stream.h  videostream.cpp  videostream.h
gta5-simple-video-export/: MFCreateSinkWriterFromURL.cpp  SimpleVideoExport.ini  config.ini  dllmain.cpp  filehandle.cpp  filehandle.h  gta5-simple-video-export.vcxproj  gta5-simple-video-export.vcxproj.filters  hook.h  info.cpp  info.h  logger.cpp  logger.h  packages.config  settings.cpp  settings.h  sinkwriter.cpp
plugin/: SimpleVideoExport.ini  cpp.hint  dllmain.cpp  hook.h  info.h  packages.config  plugin.vcxproj  plugin.vcxproj.filters  present.cpp  present.h  sinkwriter.cpp  sinkwriter.h
test/: SimpleVideoExportTest.ini  packages.config  test.cpp  test.vcxproj  test.vcxproj.filters
